# bobr_test_app

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 665ffc54747d_init.py
src/: config.py
src/application/contracts/: create_task.py  get_not_dispatched_tasks.py  get_task.py  mark_tasks_as_dispatched.py  process_task.py
src/application/ports/: __init__.py  transaction_manager.py
src/application/use_cases/: __init__.py  base.py  create_task.py  get_not_dispatched_tasks.py  get_task.py  mark_tasks_as_dispatched.py  process_task.py
src/domain/: enums.py
src/domain/entities/: __init__.py  task.py
src/domain/repositories/: __init__.py  base.py  task.py
src/infrastructure/: di_config.py  logging.py
src/infrastructure/database/: __init__.py  sqlalchemy_database.py  sqlalchemy_transaction_manager.py
src/infrastructure/database/mappers/: __init__.py  base.py  sqlalchemy_task_mapper.py
src/infrastructure/database/repositories/: __init__.py  sqlalchemy_repository.py  sqlalchemy_task_repository.py
src/infrastructure/database/schema/: __init__.py  base.py  task.py
src/interfaces/rest_api/dependencies/: __init__.py  use_cases.py
src/interfaces/rest_api/models/: __init__.py  task.py
src/interfaces/rest_api/routes/: __init__.py  tasks.py
src/interfaces/workers/: task_worker.py
src/interfaces/workers/configs/: task_worker.py
src/interfaces/workers/tasks/: __init__.py  enqueue_new_tasks.py  process_new_task.py
